# mail-tm-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
src/: accounts.rs  auth.rs  domains.rs  error.rs  http.rs  hydra.rs  inspect.rs  lib.rs  list.rs  messages.rs  token.rs  user.rs
