[package]
name = "mail-tm-rs"
description = "Mail-Tm(https://mail.tm/en/) api implementation"
version = "0.0.3"
edition = "2018"
authors = ["AwesomeIbex <awesomealpineibex@gmail.com>"]
repository = "https://github.com/AwesomeIbex/mail-tm-rs/"
readme = "README.md"
license-file = "LICENSE"
keywords = ["mail-tm", "api", "reqwest"]
categories = ["api-bindings", "web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


#TODO make sure these are transient and nice
#TODO add caching feature

[dependencies]
log = "0.4"
anyhow = "1.0.34"
reqwest = { version = "0.11.0", default_features = false, features = ["cookies", "native-tls-vendored", "socks"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.1.1", features = ["full"] } # TODO not full features
rand = "0.8.3"
thiserror = "1.0.25"

[dev-dependencies]
pretty_env_logger = "0.4.0"